feat: allow sorting listings by selected property
