# app/app/types/pagination.ts
@@ -1,0 +1,4 @@
+export interface Pagination {
+    desc?: boolean;
+    orderBy?: string;
+}
